# Energetic_Jackals

./: .gitignore  CHANGELOG.md  CLAUDE.md  PLAN.md  PLAN_v2.md  PRECOMPUTE_PLAN.md  README.md  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
app/: app.py  page_clusters.py  page_evaluation.py  page_journey.py  page_playlist.py  page_recommend.py  streamlit_app.py
notebooks/: data_preprocessing_pca.ipynb  exploration.ipynb
scripts/: derive_scenario_mappings.py  precompute.py
src/: __init__.py  clustering.py  custom_kmeans.py  evaluate.py  explain.py  features.py  recommend.py
src/data/: loader.py  preprocessing.py
src/evaluation/: __init__.py  metrics.py
src/models/: __init__.py  autoencoder.py  embeddings.py  kmeans.py
src/recommender/: __init__.py  recommend.py  similarity.py
src/utils/: __init__.py  constants.py  demo_data.py
src/visualization/: __init__.py  plots.py
